// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render 1`] = `
<div>
  <button
    class="sc-AxjAm BsmvP"
    color="primary"
    type="button"
  />
</div>
`;

exports[`Button should render a large one 1`] = `
<div>
  <button
    class="sc-AxjAm bLNvjr"
    color="primary"
    type="button"
  />
</div>
`;

exports[`Button should render a small one 1`] = `
<div>
  <button
    class="sc-AxjAm jsUDhC"
    color="primary"
    type="button"
  />
</div>
`;

exports[`Button should render an icon 1`] = `
<div>
  <button
    class="sc-AxjAm eiyaVP"
    color="primary"
    type="button"
  />
</div>
`;

exports[`Button should render as outline 1`] = `
<div>
  <button
    class="sc-AxjAm iFVgG"
    color="primary"
    type="button"
  />
</div>
`;

exports[`Button should render as plain 1`] = `
<div>
  <button
    class="sc-AxjAm joLCoM"
    color="primary"
    type="button"
  />
</div>
`;

exports[`Button should render as transparent 1`] = `
<div>
  <button
    class="sc-AxjAm kuwaXY"
    color="primary"
    type="button"
  />
</div>
`;

exports[`Button should render contrast text if not primary 1`] = `
<div>
  <button
    class="sc-AxjAm fcPzmz"
    color="danger"
    type="button"
  />
</div>
`;

exports[`Button should render if disabled 1`] = `
<DocumentFragment>
  <button
    class="sc-AxjAm BsmvP"
    color="primary"
    disabled=""
    type="button"
  >
    Click
  </button>
</DocumentFragment>
`;

exports[`Button should render white text if primary 1`] = `
<div>
  <button
    class="sc-AxjAm BsmvP"
    color="primary"
    type="button"
  />
</div>
`;
